/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.6.0/userguide/building_java_projects.html in the Gradle documentation.
 */


import com.github.spotbugs.snom.Effort
import com.github.spotbugs.snom.Confidence
import com.github.spotbugs.snom.SpotBugsTask
import net.ltgt.gradle.errorprone.errorprone

plugins {
    application
    checkstyle
    pmd
    id("com.github.spotbugs") version "6.5.9"
    id("net.ltgt.errorprone") version "5.1.0"
    id("com.diffplug.spotless") version "8.8.0"
    id("io.freefair.lombok") version "9.5.0"
    id("com.gradleup.shadow") version "9.6.1"
}

group = "org.dersbian"
version = "0.1.0"
description = "a modern compiler"

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation(libs.junit.jupiter)
    testImplementation(libs.assertj.core)

    testRuntimeOnly("org.junit.platform:junit-platform-launcher")

    // This dependency is used by the application.
    implementation(libs.guava)
    implementation(libs.slf4j.api)
    implementation(libs.picocli)
    implementation(libs.logback.classic)
    runtimeOnly(libs.logback.core)
    runtimeOnly(libs.jansi)
    annotationProcessor(libs.picocli.codegen)

    errorprone(libs.errorprone.core)
}

tasks.withType<Javadoc>().configureEach {
    options.encoding = "UTF-8"
}

checkstyle {
    toolVersion = "13.7.0"
    configFile = file("config/checkstyle/checkstyle.xml")
    maxWarnings = 0
    isIgnoreFailures = false
}

pmd {
    toolVersion = "7.26.0"
    isConsoleOutput = true
    isIgnoreFailures = false
    ruleSets = listOf() // usiamo un file esplicito sotto, non i preset stringa
    ruleSetFiles = files("config/pmd/ruleset.xml")
}

spotbugs {
    toolVersion.set("4.10.2")
    effort.set(Effort.MAX)
    reportLevel.set(Confidence.LOW)
    ignoreFailures.set(false)
}

tasks.withType<SpotBugsTask>().configureEach {
    reports.create("html") { required.set(true) }
    reports.create("xml") { required.set(true) }
}

tasks.withType<JavaCompile>().configureEach {
    options.encoding = "UTF-8"
    options.compilerArgs.addAll(
        listOf(
            "-Xlint:all,-processing",
            "-Werror"
        )
    )
    options.errorprone {
        disableWarningsInGeneratedCode.set(true)
        allErrorsAsWarnings.set(false)
        excludedPaths.set(".*/build/generated/.*")
    }
}

spotless {
    java {
        target("src/*/java/**/*.java")
        googleJavaFormat("1.35.0").aosp() // This sets indentation to 4 spaces
            .reflowLongStrings()
        removeUnusedImports()
        formatAnnotations()
    }
}

tasks.named("check") {
    dependsOn("checkstyleMain", "pmdMain", "spotbugsMain", "spotlessCheck")
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
    withSourcesJar()
    withJavadocJar()
}

application {
    // Define the main class for the application.
    mainClass = "org.dersbian.App"
    applicationDefaultJvmArgs = listOf("--enable-native-access=ALL-UNNAMED")
}

val manifestAttributes =
    mapOf(
        "Main-Class" to application.mainClass.get(),
        "Implementation-Version" to project.version.toString(),
        "Implementation-Title" to project.name,
        "Enable-Native-Access" to "ALL-UNNAMED",
    )

tasks.jar {
    manifest {
        attributes(manifestAttributes)
    }
}

tasks.shadowJar {
    archiveBaseName.set(rootProject.name)
    manifest {
        attributes(manifestAttributes)
    }
}

tasks.named<Test>("test") {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
    maxParallelForks = (Runtime.getRuntime().availableProcessors() / 2).coerceAtLeast(1)
    testLogging {
        events("passed", "skipped", "failed", "standardOut", "standardError")
        showStandardStreams = true
        showExceptions = true
        showCauses = true
        showStackTraces = true
        exceptionFormat = org.gradle.api.tasks.testing.logging.TestExceptionFormat.FULL
    }
}
